force-app/main/default/objects/Apartment__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Whether this apartment is currently available for lease.</inlineHelpText>
    <label>Available</label>
    <type>Checkbox</type>
</CustomField>