force-app/main/default/objects/Apartment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Apt_Location__c</columns>
    <columns>Account__c</columns>
    <columns>Amenities__c</columns>
    <columns>Available_Date__c</columns>
    <columns>Bedrooms__c</columns>
    <columns>Occupied__c</columns>
    <columns>Rent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>