force-app/main/default/objects/Apartment__c/listViews/Unoccupied.listView-meta.xml
<ListView>
    <fullName>Unoccupied</fullName>
    <columns>NAME</columns>
    <columns>Apt_Location__c</columns>
    <columns>Account__c</columns>
    <columns>Amenities__c</columns>
    <columns>Available_Date__c</columns>
    <columns>Bedrooms__c</columns>
    <columns>Occupied__c</columns>
    <columns>Rent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Occupied__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Unoccupied</label>
</ListView>